fix: card alignment for mobile version

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -19,7 +19,7 @@ $breakpoint-small: 768px;
 
 @mixin cardBox() {
   display: grid;
-  grid-template-columns: 50px auto 80px 50px;
+  grid-template-columns: 50px auto 75px 45px;
   align-items: center;
   width: 100%;
   height: 60px;
